[gd_scene load_steps=12 format=2]

[ext_resource path="res://scripts/Weapon.gd" type="Script" id=1]
[ext_resource path="res://Sprites/silah/pistol.png" type="Texture" id=2]
[ext_resource path="res://Audio/SFX/GunSFX/MachineGunSFX.wav" type="AudioStream" id=3]

[sub_resource type="Animation" id=1]
resource_name = "FIRE"
length = 0.2
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "fire"
} ]
}

[sub_resource type="Animation" id=2]
resource_name = "IDLE"

[sub_resource type="AnimationNodeAnimation" id=3]
animation = "FIRE"

[sub_resource type="AnimationNodeAnimation" id=4]
animation = "IDLE"

[sub_resource type="AnimationNodeStateMachineTransition" id=5]

[sub_resource type="AnimationNodeStateMachineTransition" id=6]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachine" id=7]
states/FIRE/node = SubResource( 3 )
states/FIRE/position = Vector2( 308, 85 )
states/IDLE/node = SubResource( 4 )
states/IDLE/position = Vector2( 130, 85 )
transitions = [ "IDLE", "FIRE", SubResource( 5 ), "FIRE", "IDLE", SubResource( 6 ) ]
start_node = "IDLE"

[sub_resource type="AnimationNodeStateMachinePlayback" id=8]

[node name="Tabanca" type="Node2D"]
script = ExtResource( 1 )
recoil_amount = 0.05
fire_rate = 300.0
ammo_max = 13

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="HitScan" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 1000, 0 )

[node name="StateMachineStates" type="AnimationPlayer" parent="."]
anims/FIRE = SubResource( 1 )
anims/IDLE = SubResource( 2 )

[node name="StateMachine" type="AnimationTree" parent="."]
tree_root = SubResource( 7 )
anim_player = NodePath("../StateMachineStates")
active = true
process_mode = 0
parameters/playback = SubResource( 8 )

[node name="Gunshot" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
